--- a/Front-end/src/question/question.css
+++ b/Front-end/src/question/question.css
@@ -1,11 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.Background{
+main {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets//img/background.jpg');
     width: 100%;
     height: 100vh;
@@ -14,3 +7,4 @@
     background-repeat: no-repeat;
     padding: 10.64vh 4.8vw; 
 }
+
