--- a/Front-end/src/question/question.css
+++ b/Front-end/src/question/question.css
@@ -6,5 +6,100 @@ main {
     background-position: center;
     background-repeat: no-repeat;
     padding: 10.64vh 4.8vw; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
 }
 
+.imgUser {
+    height: 70px;
+}
+
+.ContainerUserDescription {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.PerfilContainer {
+    display: flex;
+    align-items: center;
+    background-color: #D5E8F3;
+    width: 100%;
+    padding: 20px;
+    height: 100px;
+    border-radius: 30px;
+}
+
+.ContainerQuestion {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #D5E8F3;
+    width: 100%;
+    height: 70%;
+    padding: 30px;
+    border-radius: 30px;
+}
+
+.answer-option {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+label {
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.Container_response {
+    margin-top: 50px;
+}
+
+.ContainerButton {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.Button {
+    background-color: #43C715;
+    width: 200px;
+    height: 30px;
+}
+
+.Button:hover {
+    background-color: #184b06;
+    
+}
+
+.BannerWarning {
+    background-color: #D5E8F3;
+    padding: 20px;
+    border-radius: 20px;
+    font-size: 18px;
+    text-align: center;
+}
+
+.Button_cancelar {
+    background-color: #E83227;
+    width: 200px;
+    height: 30px;
+}
+
+.Button_cancelar:hover {
+    background-color: #990800;
+}
+
+.container_Button {
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
