--- a/Front-end/src/question/question.css
+++ b/Front-end/src/question/question.css
@@ -66,7 +66,27 @@ label {
     display: flex;
     justify-content: center;
 }
+.containerDificuldade{
+    display: flex;
+    justify-content: end;
+    width: 100%;
+    padding: 10px;
+    gap: 10px;
+}
+.buttonDificuldade {
+   
+    width: 30px;
+    padding: 5px;
+    height: 30px;
+    
 
+}
+.buttonImg{
+    width: 16px;  
+    height: auto; 
+    margin-right: 8px; 
+    vertical-align: middle; 
+}
 .Button {
     background-color: #43C715;
     width: 200px;
